re-factor codegen; use stiched openapi spec
