# packages/types/src/schema.ts
@@ -1,0 +1,60 @@
+/**
+ * Auto-generated schema types from OpenAPI specification.
+ * DO NOT EDIT MANUALLY.
+ */
+
+import { components } from './types';
+
+// Export all schema types from components
+
+export type APIError = components['schemas']['APIError'];
+
+export type APIResponseWithMetadata = components['schemas']['APIResponseWithMetadata'];
+
+export type PaginationResult = components['schemas']['PaginationResult'];
+
+export type ChatCompletionMessage = components['schemas']['ChatCompletionMessage'];
+
+export type ChatCompletionRequest = components['schemas']['ChatCompletionRequest'];
+
+export type ChatCompletionResponse = components['schemas']['ChatCompletionResponse'];
+
+export type ChatCompletionResponseMetadata = components['schemas']['ChatCompletionResponseMetadata'];
+
+export type EntityType = components['schemas']['EntityType'];
+
+export type ExtractRequest = components['schemas']['ExtractRequest'];
+
+export type Entity = components['schemas']['Entity'];
+
+export type GroupedEntity = components['schemas']['GroupedEntity'];
+
+export type ExtractResponse = components['schemas']['ExtractResponse'];
+
+export type ExtractResponseMetadata = components['schemas']['ExtractResponseMetadata'];
+
+export type GetAllEventsRequest = components['schemas']['GetAllEventsRequest'];
+
+export type Asset = components['schemas']['Asset'];
+
+export type Resource = components['schemas']['Resource'];
+
+export type Event = components['schemas']['Event'];
+
+export type EventHistory = components['schemas']['EventHistory'];
+
+export type GetEventResponse = components['schemas']['GetEventResponse'];
+
+export type NewsAsset = components['schemas']['NewsAsset'];
+
+export type AssetList = components['schemas']['AssetList'];
+
+export type SourceType = components['schemas']['SourceType'];
+
+export type Source = components['schemas']['Source'];
+
+export type Document = components['schemas']['Document'];
+
+export type DocumentList = components['schemas']['DocumentList'];
+
+export type SourceList = components['schemas']['SourceList'];
